src/index.scss
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

html {
  font-size: 10px;
}

:root {
  --black-color: #000;
  --white-color: #fff;
  --red-color: #f00;
  --dark-red-color: #cc0000;

  --gray-100-color: #222;
  --gray-200-color: #444;
  --gray-300-color: #666;
  --gray-400-color: #888;
  --gray-500-color: #aaa;
  --gray-600-color: #ccc;
  --gray-700-color: #eee;
  --gray-800-color: #f9f9f9;

  --primary-color: #333;
  --focus-color: #1c62b9;
  --blue-color: #065fd4;
  --cyprus-color: #004c3f;

  --transparent-white-color: rgba(255, 255, 255, 0.98);
}

.yt-icon {
  width: 3.4rem;
  height: 3.4rem;
  padding: 0.5rem;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: background-color 0.25s;
  user-select: none;
  &.active {
    background-color: rgba(128, 128, 128, 0.5);
  }
}

.yt-player-icon {
  width: 4rem;
  height: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  fill: var(--white-color);
  cursor: pointer;
}

.yt-logo {
  position: relative;
  width: 9rem;
  height: 2rem;
  .yt-logo-text {
    text-transform: uppercase;
    position: absolute;
    top: -0.6rem;
    // right: -1.5rem;
    right: -4.6rem;
    color: var(--gray-300-color);
  }
  .yt-logo-link {
    img {
      width: 100%;
      height: 100%;
    }
  }
}

.tooltip-trigger {
  position: relative;

  .tooltip-top,
  .tooltip-bottom,
  .tooltip-top-left,
  .tooltip-top-right {
    position: absolute;
    background: rgba(64, 64, 64, 0.7);
    padding: 0.7rem 1.5rem;
    color: var(--white-color);
    font-size: 1.2rem;
    white-space: nowrap;
    font-weight: 400;
    letter-spacing: 0.01rem;

    opacity: 0;
    animation: tooltip 0.25s forwards;
  }

  .tooltip-top {
    top: -4rem;
    left: 50%;
    transform: translateX(-50%);
  }

  .tooltip-bottom {
    left: 50%;
    transform: translateX(-50%);
    bottom: -4rem;
  }

  .tooltip-top-left {
    top: -4rem;
    right: 0;
  }

  .tooltip-top-right {
    top: -4rem;
    left: 0;
  }

  @keyframes tooltip {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
}
/* ... */

